Use OmegaConf for configuration

--- a/MagNet.ipynb
+++ b/MagNet.ipynb
@@ -24,6 +24,7 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "from omegaconf import OmegaConf\n",
     "import pandas as pd\n",
     "import pywt\n",
     "from skimage.transform import resize\n",
@@ -40,11 +41,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Config:\n",
-    "    pass\n",
-    "\n",
-    "CONFIG = Config()\n",
-    "CONFIG.SEED = 1"
+    "YAML_CONFIG = OmegaConf.load(\"wavelet.yaml\")\n",
+    "CLI_CONFIG = OmegaConf.from_cli()\n",
+    "CONFIG = OmegaConf.merge(YAML_CONFIG, CLI_CONFIG)"
    ]
   },
   {
@@ -304,7 +303,7 @@
        "\n",
        "                Logging results to <a href=\"https://wandb.com\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
        "                Project page: <a href=\"https://app.wandb.ai/seungjaeryanlee/MagNet\" target=\"_blank\">https://app.wandb.ai/seungjaeryanlee/MagNet</a><br/>\n",
-       "                Run page: <a href=\"https://app.wandb.ai/seungjaeryanlee/MagNet/runs/1osg4431\" target=\"_blank\">https://app.wandb.ai/seungjaeryanlee/MagNet/runs/1osg4431</a><br/>\n",
+       "                Run page: <a href=\"https://app.wandb.ai/seungjaeryanlee/MagNet/runs/3ipr50af\" target=\"_blank\">https://app.wandb.ai/seungjaeryanlee/MagNet/runs/3ipr50af</a><br/>\n",
        "            "
       ],
       "text/plain": [
@@ -324,7 +323,7 @@
     {
      "data": {
       "text/plain": [
-       "[<wandb.wandb_torch.TorchGraph at 0x7f8b55431390>]"
+       "[<wandb.wandb_torch.TorchGraph at 0x7f1e400334d0>]"
       ]
      },
      "execution_count": 12,
@@ -333,7 +332,7 @@
     }
    ],
    "source": [
-    "wandb.init(project=\"MagNet\")\n",
+    "wandb.init(project=\"MagNet\", config=CONFIG)\n",
     "wandb.watch(net)"
    ]
   },
